# empty-argv-segfault-check

./: CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  find-executables.sh  main.cc  segfault_detect.sh.cmake
